fix alignment of right scroll arrow for watchlist

--- a/packages/frontend/app/routes/trade/watchlist/watchlist.module.css
+++ b/packages/frontend/app/routes/trade/watchlist/watchlist.module.css
@@ -63,14 +63,14 @@
 .watchListLimitor {
     max-width: calc(
         100vw - var(--order-book-width-desktop-small) -
-            var(--trade-module-width-desktop-small) - var(--gap-s) * 4 - 9.2rem
+            var(--trade-module-width-desktop-small) - var(--gap-s) * 4 - 8rem
     );
 }
 
 .watchListLimitorNarrow {
     max-width: calc(
         100vw - var(--order-book-width-desktop-small) * 3 -
-            var(--trade-module-width-desktop-small) - var(--gap-s) * 4 - 9.2rem
+            var(--trade-module-width-desktop-small) - var(--gap-s) * 4 - 8rem
     );
 }
 
@@ -79,7 +79,7 @@
         max-width: calc(
             100vw - var(--order-book-width-desktop-large) -
                 var(--trade-module-width-desktop-large) - var(--gap-s) * 4 -
-                9.2rem
+                8rem
         );
     }
 
@@ -87,7 +87,7 @@
         max-width: calc(
             100vw - var(--order-book-width-desktop-large) * 3 -
                 var(--trade-module-width-desktop-large) - var(--gap-s) * 4 -
-                9.2rem
+                8rem
         );
     }
 }
@@ -95,6 +95,6 @@
 @media only screen and (max-width: 1080px) {
     .watchListLimitor,
     .watchListLimitorNarrow {
-        max-width: calc(100vw - var(--gap-s) * 4 - 8.2rem);
+        max-width: calc(100vw - var(--gap-s) * 4 - 7.5rem);
     }
 }
